audit NFT Collection Explorer

--- a/enhanced-apis/NFT-Collection-Explorer/web/src/styles/globals.css
+++ b/enhanced-apis/NFT-Collection-Explorer/web/src/styles/globals.css
@@ -77,10 +77,14 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+  a {
+    color: #213547;
+  }
   a:hover {
     color: #747bff;
   }
   button {
     background-color: #f9f9f9;
+    color: #213547;
   }
 }
